# mamba-mcp

./: CLAUDE.md  README.md  prompt.md  pyproject.toml
.claude/: prd-tools.local.md  settings.json  spec-manager.state.json
examples/: sample_server.py
internal/missions/gitlab-mcp-server/: mamba-mcp-server-gitlab.tasks.json  progress.txt
internal/specs/: PRD-mamba-mcp-server-gitlab.md
missions/gitlab-mcp-server/: mamba-mcp-server-gitlab.tasks.json  mamba-mcp-server-gitlab.tasks.md
specs/: mamba-mcp-client.prd.md
src/mamba_mcp_client/: cli.py  client.py  config.py  logging.py
src/mamba_mcp_client/tui/: app.py
tests/: __init__.py  test_client.py
