[project]
name = "mamba-mcp"
version = "0.1.0"
description = "Mamba MCP - A collection of MCP tools and servers"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

# No dependencies at root - this is a virtual workspace

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
mamba-mcp-core = { workspace = true }
mamba-mcp-client = { workspace = true }
mamba-mcp-server-gitlab = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
exclude = [
    "packages/.*/tests/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
